# rust-spongebob-quotes-api

./: Cargo.toml
src/: main.rs
src/static/: krusty-krab-pizza-transcript.txt
