[package]
name = "spongebob-random-quote-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
rand = "0.8.5"
serde_json = "1.0.120"
tokio = { version = "1.38.1", features = ["macros", "rt-multi-thread"] }
